--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,41 @@
+/* Global styles */
+
+body {
+    font-family: sans-serif;
+}
+
+.bottom {
+    height: 3px;
+    background-color: #000;
+}
+
+h2 {
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+
+a, a:link, a:active {
+    color: #000;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: yellow;
+}
+
+nav a:hover, a:hover .product-name{
+    font-weight: 700;
+}
+
+button {
+    background-color: yellow;
+    font-weight: 700;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Flex boxes */
+
 #h1-container {
     display: flex;
     justify-content: center;
@@ -12,20 +50,56 @@ nav {
 
 #gallery-section {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+}
+
+#product-section, #cart-section {
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-a:hover {
-    background-color: yellow;
+#selects {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-a:hover .product-name{
-    font-weight: 700;
+#glazing-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
+
+#pack-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#cart {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+#total {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Individual styles */
 
 h1 {
+    font-family: serif;
     font-weight: 400;
 }
 
@@ -33,8 +107,44 @@ h1 {
     width: 400px;
 }
 
-.gallery{
+nav {
+    margin-bottom: 40px;
+}
+
+.gallery {
     width: 400px;
     height: 400px;
     border: 2px solid #000
+}
+
+.description {
+    width: 600px;
+    height: 600px;
+}
+
+.item {
+    margin: 4px;
+}
+
+.cart {
+    width: 200px;
+    height: 200px;
+}
+
+.cart-item {
+    text-align: center;
+}
+
+.cart-description {
+    line-height: 5px;
+}
+
+.remove {
+    font-size: .8rem;
+    font-weight: 700;
+    text-decoration: underline;
+}
+
+.cart-price, #total {
+    font-size: 1.2rem;
 }
