--- a/style/styles.css
+++ b/style/styles.css
@@ -19,7 +19,7 @@ a, a:link, a:active {
     text-decoration: none;
 }
 
-a:hover {
+a:not(#logo):hover {
     background-color: yellow;
 }
 
@@ -103,7 +103,7 @@ h1 {
     font-weight: 400;
 }
 
-.logo {
+#logo {
     width: 400px;
 }
 
