--- a/style/styles2.css
+++ b/style/styles2.css
@@ -121,6 +121,17 @@ nav {
     justify-content: space-between;
 }
 
+#total {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+#total-price {
+    display: flex;
+    gap: 333px;
+}
+
 /* Individual styles */
 
 #logo {
@@ -156,6 +167,6 @@ nav {
     text-decoration: underline;
 }
 
-.cart-price, #total {
-    font-size: 1.4 rem;
+#checkout-button {
+    height: 80px;
 }
