--- a/style/styles2.css
+++ b/style/styles2.css
@@ -123,7 +123,7 @@ nav {
     margin-top: 100px;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     gap: 33px;
 }
 
