--- a/solution-hw5/Style/styles2.css
+++ b/solution-hw5/Style/styles2.css
@@ -125,7 +125,7 @@ nav {
     gap: 33px;
 }
 
-#cart-section {
+#roll-list {
     margin-left: 33%;
     margin-right: 100px;
     display: flex;
@@ -144,6 +144,10 @@ nav {
 
 .cart-price {
     margin-top: 66px;
+}
+
+.checkout {
+   margin-right: 99px;
 }
 
 #total {
@@ -203,15 +207,21 @@ nav {
 }
 
 .remove {
-    padding-top: 10px;
-    padding-button:10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-inline-end: 0px;
+    padding-inline-start: 0px;
     border: 0px;
     color: #000;
     background-color: white;
     text-decoration: underline;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     font-weight: 700;
     align-self: flex-start;
+}
+
+.remove:hover {
+    background-color: lightgray;
 }
 
 #checkout-button {
