--- a/final-project/Final Project Code/style.css
+++ b/final-project/Final Project Code/style.css
@@ -58,7 +58,6 @@ nav {
     left: 0;
     right: 0;
     height: 1vh;
-    /* background-color: red; */
     background-color: #FFFEFC;
     transition: 800ms ease-in-out;
 }
@@ -69,7 +68,6 @@ nav {
     justify-content: flex-end;
     height: 50vh;
     z-index: -1;
-    /* background-color: red; */
 }
 
 #draft-buttons {
@@ -77,7 +75,11 @@ nav {
     flex-direction: column;
     justify-content: flex-end;
     height: 30vh;
-    /* background-color: yellow; */
+}
+
+#draft-options {
+    display: flex;
+    flex-direction: column;
 }
 
 /* Appearance */
@@ -127,10 +129,17 @@ body {
     outline: 0px solid transparent;
   }
 
-#writing-area {
+#writing-area, #draft-options > button {
     font-family: 'Zilla Slab', sans-serif;
     font-size: 64px;
     font-weight: 400;
+}
+
+#draft-options > button {
+    border: none;
+    background: none;
+    text-align: left;
+    text-decoration: underline;
 }
 
 #writing-area p {
