--- a/final-project/Final Project Code/style.css
+++ b/final-project/Final Project Code/style.css
@@ -160,7 +160,8 @@ body {
 
 #writing-area, #draft-options > button {
     font-family: 'Zilla Slab', sans-serif;
-    font-size: 64px;
+    /* font-size: 64px; */
+    font-size: 8vh;
     font-weight: 400;
 }
 
@@ -171,9 +172,20 @@ body {
     text-decoration: underline;
 }
 
-#writing-area p, #history-area {
+#writing-area p {
     margin-top: 0px;
     margin-bottom: 16px;
+}
+
+.history-area {
+    padding-left: 4%;
+    padding-right: 5%;
+    margin-bottom: 10vh;
+}
+
+.history-buttons {
+    padding-left: 4%;
+    padding-right: 5%;
 }
 
 .draft-title {
@@ -181,12 +193,6 @@ body {
     font-size: 32px;
     font-weight: 600;
     padding-top: 32px;
-}
-
-.history-text {
-    font-family: 'Zilla Slab', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
 }
 
 h1 {
@@ -210,7 +216,7 @@ h2:not(#first-h2) {
     font-size: 14px;
 }
 
-.save-draft-button, .copy-button {
+.save-draft-button, .copy-button, .clear-history-button {
     font-family: 'Barlow', sans-serif;
     border: none;
     background: none;
@@ -220,9 +226,26 @@ h2:not(#first-h2) {
     cursor: pointer;
 }
 
+.alert-button {
+    font-family: 'Barlow', sans-serif;
+    border-radius: 4px;
+    border: 1px #493DB8 solid;
+    padding: 4px;
+    margin: 4px;
+    cursor: pointer;
+}
+
+.alert-button:hover {
+    background-color: #493DB8;
+    color: white;
+}
+
 .history-draft {
-    color: red;
-    background-color: yellow;
+    font-family: 'Zilla Slab', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 3vh;
+    border-bottom: 1px #000 solid;
 }
 
 /* Dark mode library customization */
@@ -234,6 +257,37 @@ h2:not(#first-h2) {
     font-family: 'Barlow', sans-serif;
     font-size: 14px;
     line-height: 22px;
+}
+
+#alert {
+    display: none;
+    position: absolute;
+    z-index: 100;
+    margin: auto;
+    height: 20vh;
+    min-height: 96px;
+    width: 50vw;
+    min-width: 360px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    place-content: center;
+    border-radius: 4px;
+    padding: 24px;
+    text-align: center;
+    background-color: #F7F6F3;
+    filter: drop-shadow(#A4ACB3 2px 2px 2px);
+    font-family: 'Barlow', sans-serif;
+}
+
+h1 a {
+    text-decoration: none;
+    color: black;
+}
+
+#history-links a {
+    color: #0D66CC;
 }
 
 /* End dark mode library customization */
@@ -276,7 +330,7 @@ h2:not(#first-h2) {
     width: 12px;
     left: 2px;
     bottom: 2px;
-    background-color: white;
+    background-color: #011628;
     -webkit-transition: .8s;
     transition: .8s;
 }
